# nt2

./: .gitignore
cmake/: NT2Module.cmake
modules/arch/include/nt2/arch/: default.hpp  forward.hpp  generate.hpp  setup.hpp
modules/arch/include/nt2/arch/concepts/: default.hpp
modules/arch/include/nt2/arch/generate/: example.hpp
modules/arch/include/nt2/arch/setup/: default.hpp  fetch.hpp  generate.hpp
modules/arch/include/nt2/arch/setup/default/: arch.hpp  compiler.hpp  os.hpp
modules/arch/include/nt2/arch/setup/default/arch/: ia64.hpp  none.hpp  powerpc.hpp  report.hpp  x86.hpp
modules/arch/include/nt2/arch/setup/default/compiler/: gcc.hpp  gcc_xml.hpp  report.hpp
modules/arch/include/nt2/arch/setup/default/os/: macos.hpp  windows.hpp
modules/arch/include/nt2/arch/setup/generate/: compiler.hpp
modules/arch/include/nt2/arch/setup/generate/arch/: example.hpp
modules/arch/include/nt2/arch/setup/generate/compiler/: example.hpp
modules/arch/include/nt2/arch/triplets/: default.hpp  generate.hpp
modules/arch/include/nt2/arch/triplets/default/: arch.hpp
modules/arch/include/nt2/arch/triplets/default/arch/: ia64.hpp  powerpc.hpp  report.hpp
modules/arch/include/nt2/arch/triplets/default/compiler/: none.hpp  visualc.hpp
modules/arch/include/nt2/arch/triplets/default/os/: nix.hpp  none.hpp  report.hpp
modules/arch/include/nt2/arch/triplets/fetch/: fetched.hpp
modules/arch/include/nt2/arch/triplets/generate/: arch.hpp  os.hpp
modules/arch/include/nt2/arch/triplets/generate/os/: example.hpp
modules/config/: CMakeLists.txt
modules/config/cmake/: nt2.config.dependencies.cmake  nt2.gpu.cmake  nt2.opencl.cmake
modules/config/include/nt2/sdk/config/: arch.hpp
modules/config/include/nt2/sdk/config/configurator/: cache.hpp  core.hpp  cpuid.hpp  gpu.hpp  header.hpp  units.hpp  utils.hpp  vectorial.hpp
modules/config/src/: CMakeLists.txt  configure  infos.hpp.cmake  main.cpp
modules/config/src/configurator/: CMakeLists.txt  cache.cpp  core.cpp  cpuid.cpp  gpu.cpp  header.cpp  main.cpp  units.cpp  vectorial.cpp
modules/config/src/configurator/cmake/: nt2.gpu.cmake  nt2.hwloc.cmake  nt2.threading.cmake
modules/platform/: CMakeLists.txt
modules/platform/cmake/: nt2.platform.dependencies
modules/platform/include/nt2/platform/: platform.hpp  units.hpp
modules/platform/include/nt2/platform/units/: core_unit.hpp  memory_unit.hpp  scalar_unit.hpp  simd_unit.hpp
modules/predef/: CMakeLists.txt
modules/predef/include/nt2/predef/: arch.hpp  os.hpp  report.hpp  setup.hpp
modules/predef/include/nt2/predef/arch/ia64/: ia64.hpp
modules/predef/include/nt2/predef/arch/none/: none.hpp
modules/predef/include/nt2/predef/arch/ppc/: powerpc.hpp
modules/predef/include/nt2/predef/arch/x86/: x86.hpp
modules/predef/include/nt2/predef/arch/x86_64/: x86_64.hpp
modules/predef/include/nt2/predef/compiler/: gcc.hpp  gcc_xml.hpp  none.hpp  report.hpp  visualc.hpp
modules/predef/include/nt2/predef/os/: nix.hpp  none.hpp  report.hpp
modules/sdk/cmake/: nt2.sdk.dependencies.cmake
modules/sdk/include/nt2/sdk/: config.hpp
modules/sdk/include/nt2/sdk/config/: arch.hpp  cache.hpp  core.hpp  cpuid.hpp  gpu.hpp  simd.hpp  utils.hpp
modules/sdk/include/nt2/sdk/memory/: parameters.hpp
modules/sdk/src/: CMakeLists.txt
modules/sdk/src/config/: cache.cpp  core.cpp  cpuid.cpp  gpu.cpp  simd.cpp  utils.cpp
tools/configurator/: CMakeLists.txt
tools/configurator/cmake/: infos.hpp.cmake  nt2.gpu.cmake  nt2.hwloc.cmake  nt2.mpi.cmake  nt2.threading.cmake
tools/configurator/include/units/: units.hpp
tools/configurator/include/utils/: header.hpp  license.hpp
tools/configurator/src/: main.cpp
tools/configurator/src/units/: units.cpp
tools/configurator/src/utils/: header.cpp
